Bug 1401224 - Do not call aWriter with no data in CacheFileInputStream::ReadSegments, r=valentin