netwerk/cache2/CacheFileInputStream.cpp
@@ -131,7 +131,7 @@ CacheFileInputStream::ReadSegments(nsWriteSegmentFun aWriter, void *aClosure,
   LOG(("CacheFileInputStream::ReadSegments() [this=%p, count=%d]",
        this, aCount));
 
-  nsresult rv;
+  nsresult rv = NS_OK;
 
   *_retval = 0;
 
@@ -166,6 +166,10 @@ CacheFileInputStream::ReadSegments(nsWriteSegmentFun aWriter, void *aClosure,
       }
     }
 
+    if (aCount == 0) {
+      break;
+    }
+
     CacheFileChunkReadHandle hnd = mChunk->GetReadHandle();
     int64_t canRead = CanRead(&hnd);
     if (NS_FAILED(mStatus)) {
@@ -198,16 +202,11 @@ CacheFileInputStream::ReadSegments(nsWriteSegmentFun aWriter, void *aClosure,
         aCount -= read;
 
         if (!mClosed) {
-          if (hnd.DataSize() != mChunk->DataSize()) {
-            // New data was written to this chunk while the lock was released.
-            continue;
-          }
-
           // The last chunk is released after the caller closes this stream.
           EnsureCorrectChunk(false);
 
           if (mChunk && aCount) {
-            // We have the next chunk! Go on.
+            // Check whether there is more data available to read.
             continue;
           }
         }
@@ -220,7 +219,7 @@ CacheFileInputStream::ReadSegments(nsWriteSegmentFun aWriter, void *aClosure,
 
       rv = NS_OK;
     } else {
-      if (mFile->OutputStreamExists(mAlternativeData)) {
+      if (*_retval == 0 && mFile->OutputStreamExists(mAlternativeData)) {
         rv = NS_BASE_STREAM_WOULD_BLOCK;
       } else {
         rv = NS_OK;
